# norteia-brave

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SOURCES.md  alembic.ini  docker-compose.yml  pyproject.toml
.omc/: project-memory.json
.omc/sessions/: 06118ad5-79df-4eb7-933b-18e677100fd0.json  53912cd5-a715-4936-92e7-d8224cc971af.json  8a018af8-26c9-4ef9-9bd5-3cf4c70d468b.json  90039040-abbc-4432-8745-88aaaf0c0d59.json  c0bff115-936f-4316-9fab-062208eab8e3.json  c684c307-aa70-440b-901d-824aabca62b0.json  c7ad56dc-915f-47b1-af24-21f555fc7926.json  f0bd2879-ff9e-4744-8bb7-44242fb70540.json
.omc/state/: hud-stdin-cache.json
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 0001_init_nascente_rio_mar.py  0002_add_hnsw_index.py  0003_partial_unique_mar_source_ref.py  0004_consent_log.py  0005_conversation_message.py  0006_add_rio_mar_ready.py  0007_add_runs_history.py  0008_binary_score_routing.py  0009_config_settings.py  0010_record_events.py  0011_reference_tables.py
brave/: __init__.py  cli.py
brave/api/: __init__.py  deps.py  main.py
brave/clients/: __init__.py  apify.py  base.py  llm.py  melhores_destinos.py  mtur.py  nominatim.py  norteia_api.py  notebooklm.py  null_apify.py  null_llm.py  null_melhores_destinos.py  null_mtur.py  null_nominatim.py  null_norteia_api.py  null_notebooklm.py  null_places.py  null_tripadvisor.py  null_whatsapp.py  places.py  whatsapp.py
brave/compliance/: consent_log.py  gate.py  (+1 more)
dashboard/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
docs/: FLUXO-BRAVE.md  PLANO-BRAVE.md  atrativos-brave-api-field-mapping.md  brave-spec-driven-development.md  monitor-mar-promotion-findings.md  scoring-nascente-para-rio.md  tripadvisor-atrativo-collection.md  ultraplan-refactor-brave.md
scripts/: app.sh  calibrate_destinos.py  dtb_reconcile.py  ingest_destinos.py  loadtest_destinos_atrativos.py  mtur_download_2025.py  mtur_xlsx_to_csv.py  seed_config.py  seed_reference_data.py  spike_nominatim_geo.py  ta_bootstrap  ta_bootstrap.py  ta_bulk_sweep.py  ta_discover_state_geoids.py
tests/: __init__.py  conftest.py  test_cms_endpoints.py  test_workers_endpoints.py
(+812 files in other folders)
