[project]
name = "norteia-brave"
version = "0.1.0"
description = "Pipeline Brave — Norteia territorial data collection and reliability-scoring engine"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    # API
    "fastapi[standard]==0.136.3",
    "uvicorn[standard]==0.49.0",
    # Validation & config
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    # Task queue & scheduling
    "celery==5.6.3",
    "redis==8.0.0",
    "celery-redbeat==2.3.3",
    # Database
    "sqlalchemy==2.0.50",
    "psycopg[binary]==3.3.4",
    "pgvector==0.4.2",
    "alembic==1.18.4",
    # LLM clients
    "openai==2.41.1",
    "anthropic==0.109.1",
    "instructor==1.15.1",
    # LangGraph (WhatsApp conversation graph + PostgreSQL checkpointer, D-08)
    "langgraph==1.2.5",
    "langgraph-checkpoint-postgres==3.1.0",
    # HTTP & resilience
    "httpx==0.28.1",
    "tenacity==9.1.4",
    # IBGE municipality resolver (TA-03) — fuzzy string matching
    "rapidfuzz>=3.9.0",
    # Observability
    "structlog==26.1.0",
    "google-maps-places>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "respx==0.23.1",
    "vcrpy==8.1.1",
    "fakeredis==2.36.1",
    "pact-python==3.4.0",
    "pytest-socket==0.8.0",
    "ruff",
    "pyright",
    "celery-types==0.26.0",
    "flower==2.0.1",
    "pytest-asyncio",
]

[project.scripts]
brave = "brave.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brave"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection idiom: Depends/Query/Header/Path in argument
# defaults is the framework's intended pattern, not the B008 mutable-default bug.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header", "fastapi.Path"]

[tool.ruff.lint.isort]
known-first-party = ["brave"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["brave", "tests"]
ignore = ["alembic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: marks tests that require docker-compose services (DB + Redis)",
]
